# AmitGraduateProject

./: README.md
Car/: CMakeLists.txt
Car/src/: CMakeLists.txt  main.c
Car/src/hal/bluetooth/: CMakeLists.txt  bluetooth.h
Car/src/hal/lcd/: CMakeLists.txt  lcd.h
Car/src/hal/led/: led.c
Car/src/mcal/: CMakeLists.txt
Car/src/mcal/adc/: adc.c  adc_types.h
Car/src/mcal/dio/: cfg.c  dio.h  hw.h  types.h
Car/src/mcal/interrupt/general/: gint.c
Car/src/mcal/timer/: CMakeLists.txt  timer.c
Car/src/mcal/uart/: CMakeLists.txt  uart.c  uart.h
Design/: HAND TRAN.pdsprj  RESEV CONTROL pdsprj.pdsprj
Flow/: Presentation.pptx
Hand/: CMakeLists.txt
Hand/src/: main.c
Hand/src/hal/: CMakeLists.txt
Hand/src/hal/bluetooth/: bluetooth.c
Hand/src/hal/lcd/: lcd.c  lcd.h
Hand/src/hal/led/: CMakeLists.txt  led.h
Hand/src/lib/: ATMEGA32_REG.h  BitMath.h  CMakeLists.txt  STD_Types.h  io.h
Hand/src/mcal/adc/: CMakeLists.txt  adc.h  hw.h
Hand/src/mcal/dio/: CMakeLists.txt  cfg.h  dio.c
Hand/src/mcal/interrupt/: CMakeLists.txt
Hand/src/mcal/interrupt/general/: CMakeLists.txt  gint.h  hw.h
Hand/src/mcal/timer/: hw.h  timer.c  timer.h
Hand/src/mcal/uart/: hw.h
